--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -46,6 +46,7 @@
 
 <!--项目JS-->
 <script th:src="@{'project/js/app.js'}"></script>
+<script th:src="@{'project/js/flavor/flavor.js'}"></script>
 
 </body>
 </html>
